export enum EstadoFormacion {
    EN_DEPOSITO,
    DETENIDA,
    EN_MARCHA
}