export default abstract class Vagon {
  public abstract calcularPesoMaximo(): number;

  public calcularMaximoPasajeros() {
    return 0;
  }
}
